--- a/debian.cfg
+++ b/debian.cfg
@@ -5,10 +5,10 @@
 # https://preseed.debian.net/debian-preseed/trixie/amd64-main-full.txt
 
   # 下面这行语句无效，因为本行后面有反斜杠，前面有空格（安装器认为不算注释）\
-d-i debian-installer/locale string en_US
+d-i debian-installer/locale string en_US.UTF-8
 
 # B.4.1. 本地化
-d-i debian-installer/locale string en_US
+d-i debian-installer/locale string en_US.UTF-8
 d-i keyboard-configuration/xkb-keymap select us
 
 # B.4.2. 网络设置
@@ -71,6 +71,7 @@ d-i partman-auto/expert_recipe_efi string efi :: \
     1 1 -1 btrfs \
     method{ format } format{ } use_filesystem{ } filesystem{ btrfs } options{ compress=zstd,noatime } mountpoint{ / } .
 
+# 大于 2T 会自动用 gpt
 # shellcheck disable=SC1083,SC2086,SC2154
 d-i partman-auto/expert_recipe_bios string bios :: \
     1 1 1 free \
@@ -192,7 +193,7 @@ d-i preseed/late_command string true; \
             wget -O /target/frpc.tar.gz "$url" && break; \
         done; \
         tar xzf /target/frpc.tar.gz "$basename/frpc" -O >/target/usr/local/bin/frpc; \
-        rm -f /target/frpc.tar.gzx; \
+        rm -f /target/frpc.tar.gz; \
         chmod a+x /target/usr/local/bin/frpc; \
         cp /configs/frpc.toml /target/usr/local/etc/frpc/; \
         cp /frpc.service /target/etc/systemd/system/; \
