--- a/debian.cfg
+++ b/debian.cfg
@@ -183,7 +183,7 @@ d-i preseed/late_command string true; \
         echo "Port $ssh_port" >>/target/etc/ssh/sshd_config; \
     fi; \
     # 强制根分区 btrfs 挂载选项包含 compress=zstd（保留已有 subvol 等其他选项） \
-    perl -i -pe 's{^(\S+\s+/\s+btrfs\s+)(\S+)}{$1compress=zstd,$2}' /target/etc/fstab; \
+    sed -Ei 's@^(\\S+[[:space:]]+/[[:space:]]+btrfs[[:space:]]+)(\\S+)@\\1compress=zstd,\\2@' /target/etc/fstab; \
 
     if [ -s /configs/frpc.toml ]; then \
         url=$(sh /get-frpc-url.sh linux); \
