尝试修复挂载参数问题

--- a/debian.cfg
+++ b/debian.cfg
@@ -182,8 +182,10 @@ d-i preseed/late_command string true; \
         echo "Port $ssh_port" >/target/etc/ssh/sshd_config.d/01-change-ssh-port.conf || \
         echo "Port $ssh_port" >>/target/etc/ssh/sshd_config; \
     fi; \
-    # 强制根分区 btrfs 挂载选项包含 compress=zstd（保留已有 subvol 等其他选项） \
-    in-target sed -i -r 's@^(\\S+[[:space:]]+/[[:space:]]+btrfs[[:space:]]+)(\\S+)@\\1compress=zstd,\\2@' /etc/fstab; \
+    # 将 subvol=@rootfs 替换为 subvol=/@ \
+    in-target sed -i 's/subvol=@rootfs/subvol=\\/@/' /etc/fstab; \
+    # 为 btrfs 根分区添加 compress=zstd（如果还没有的话） \
+    in-target sed -i '/[[:space:]]\\/[[:space:]].*btrfs/ { /compress=zstd/! s/btrfs[[:space:]]\\+/btrfs   compress=zstd,/ }' /etc/fstab; \
 
     if [ -s /configs/frpc.toml ]; then \
         url=$(sh /get-frpc-url.sh linux); \
