--- a/debian.cfg
+++ b/debian.cfg
@@ -98,13 +98,6 @@ d-i grub-installer/force-efi-extra-removable boolean true
 # B.4.12. 完成安装
 d-i finish-install/reboot_in_progress note
 
-# B.4.13. 预置其他的软件包
-
-# 其他设置
-# d-i anna/standard_modules boolean false
-# d-i anna/choose_modules string network-console
-# d-i network-console/password password 123@@@
-# d-i network-console/password-again password 123@@@
 
 # B.5.1. 安装过程中运行用户命令
 # 注意所有命令都会合并成一行命令
@@ -182,11 +175,10 @@ d-i preseed/late_command string true; \
         echo "Port $ssh_port" >/target/etc/ssh/sshd_config.d/01-change-ssh-port.conf || \
         echo "Port $ssh_port" >>/target/etc/ssh/sshd_config; \
     fi; \
-    # 将 subvol=@rootfs 替换为 subvol=/@ \
+    : "replace subvol=@rootfs with subvol=/@"; \
     in-target sed -i 's/subvol=@rootfs/subvol=\\/@/' /etc/fstab; \
-    # 为 btrfs 根分区添加 compress=zstd（如果还没有的话） \
+    : "add compress=zstd for btrfs root if missing"; \
     in-target sed -i '/[[:space:]]\\/[[:space:]].*btrfs/ { /compress=zstd/! s/btrfs[[:space:]]\\+/btrfs   compress=zstd,/ }' /etc/fstab; \
-
     if [ -s /configs/frpc.toml ]; then \
         url=$(sh /get-frpc-url.sh linux); \
         basename=$(echo "$url" | sed 's,.*/,,' | sed 's,\.tar\.gz,,'); \
