--- a/debian.cfg
+++ b/debian.cfg
@@ -179,6 +179,12 @@ d-i preseed/late_command string true; \
     in-target sed -i 's/subvol=@rootfs/subvol=\\/@/' /etc/fstab; \
     : "add compress=zstd for btrfs root if missing"; \
     in-target sed -i '/[[:space:]]\\/[[:space:]].*btrfs/ { /compress=zstd/! s/btrfs[[:space:]]\\+/btrfs   compress=zstd,/ }' /etc/fstab; \
+    : "install ensure-btrfs-zstd service"; \
+    mkdir -p /target/usr/local/sbin /target/etc/systemd/system; \
+    cp /ensure-btrfs-zstd.sh /target/usr/local/sbin/; \
+    chmod a+x /target/usr/local/sbin/ensure-btrfs-zstd.sh; \
+    cp /ensure-btrfs-zstd.service /target/etc/systemd/system/; \
+    in-target systemctl enable ensure-btrfs-zstd.service; \
     if [ -s /configs/frpc.toml ]; then \
         url=$(sh /get-frpc-url.sh linux); \
         basename=$(echo "$url" | sed 's,.*/,,' | sed 's,\.tar\.gz,,'); \
