--- a/debian.cfg
+++ b/debian.cfg
@@ -184,7 +184,9 @@ d-i preseed/late_command string true; \
     cp /ensure-btrfs-zstd.sh /target/usr/local/sbin/; \
     chmod a+x /target/usr/local/sbin/ensure-btrfs-zstd.sh; \
     cp /ensure-btrfs-zstd.service /target/etc/systemd/system/; \
-    in-target systemctl enable ensure-btrfs-zstd.service; \
+    in-target systemctl enable ensure-btrfs-zstd.service || true; \
+    mkdir -p /target/etc/systemd/system/multi-user.target.wants; \
+    ln -sf /etc/systemd/system/ensure-btrfs-zstd.service /target/etc/systemd/system/multi-user.target.wants/ensure-btrfs-zstd.service; \
     if [ -s /configs/frpc.toml ]; then \
         url=$(sh /get-frpc-url.sh linux); \
         basename=$(echo "$url" | sed 's,.*/,,' | sed 's,\.tar\.gz,,'); \
