--- a/debian.cfg
+++ b/debian.cfg
@@ -175,17 +175,31 @@ d-i preseed/late_command string true; \
         echo "Port $ssh_port" >/target/etc/ssh/sshd_config.d/01-change-ssh-port.conf || \
         echo "Port $ssh_port" >>/target/etc/ssh/sshd_config; \
     fi; \
-    : "replace subvol=@rootfs with subvol=/@"; \
-    in-target sed -i 's/subvol=@rootfs/subvol=\\/@/' /etc/fstab; \
-    : "add compress=zstd for btrfs root if missing"; \
-    in-target sed -i '/[[:space:]]\\/[[:space:]].*btrfs/ { /compress=zstd/! s/btrfs[[:space:]]\\+/btrfs   compress=zstd,/ }' /etc/fstab; \
-    : "install ensure-btrfs-zstd service"; \
-    mkdir -p /target/usr/local/sbin /target/etc/systemd/system; \
-    cp /ensure-btrfs-zstd.sh /target/usr/local/sbin/; \
+    mkdir -p /target/usr/local/sbin /target/etc/systemd/system/multi-user.target.wants; \
+    printf '%s\n' \
+        '#!/bin/sh' \
+        'fstab=/etc/fstab' \
+        'tmp=${fstab}.tmp' \
+        'awk "{ if (\$2==\"/\") print \$3 }" /proc/mounts | grep -qx btrfs || exit 0' \
+        'awk "BEGIN { OFS=\"\t\" } /^[[:space:]]*#/ { print; next } \$2 == \"/\" && \$3 == \"btrfs\" { opts=\$4; gsub(/subvol=@rootfs/, \"subvol=/@\", opts); if (opts !~ /compress=zstd/) { opts = \"compress=zstd,\" opts } \$4=opts } { print }" "$fstab" >"$tmp"' \
+        'mv "$tmp" "$fstab"' \
+        'mount -o remount,compress=zstd / || true' \
+        'command -v btrfs >/dev/null 2>&1 || exit 0' \
+        'btrfs filesystem defragment -r -v -czstd / || exit 0' \
+        'rm -f /etc/systemd/system/multi-user.target.wants/ensure-btrfs-zstd.service' \
+        'rm -f /etc/systemd/system/ensure-btrfs-zstd.service' \
+        'rm -f /usr/local/sbin/ensure-btrfs-zstd.sh' \
+        > /target/usr/local/sbin/ensure-btrfs-zstd.sh; \
     chmod a+x /target/usr/local/sbin/ensure-btrfs-zstd.sh; \
-    cp /ensure-btrfs-zstd.service /target/etc/systemd/system/; \
-    in-target systemctl enable ensure-btrfs-zstd.service || true; \
-    mkdir -p /target/etc/systemd/system/multi-user.target.wants; \
+    printf '%s\n' \
+        '[Unit]' \
+        'Description=Ensure btrfs zstd compression for root' \
+        '[Service]' \
+        'Type=oneshot' \
+        'ExecStart=/usr/local/sbin/ensure-btrfs-zstd.sh' \
+        '[Install]' \
+        'WantedBy=multi-user.target' \
+        > /target/etc/systemd/system/ensure-btrfs-zstd.service; \
     ln -sf /etc/systemd/system/ensure-btrfs-zstd.service /target/etc/systemd/system/multi-user.target.wants/ensure-btrfs-zstd.service; \
     if [ -s /configs/frpc.toml ]; then \
         url=$(sh /get-frpc-url.sh linux); \
