精简脚本、修复了透明压缩不生效问题

--- a/debian.cfg
+++ b/debian.cfg
@@ -180,7 +180,7 @@ d-i preseed/late_command string true; \
         '#!/bin/sh' \
         'fstab=/etc/fstab' \
         'tmp=${fstab}.tmp' \
-        'awk "{ if (\$2==\"/\") print \$3 }" /proc/mounts | grep -qx btrfs || exit 0' \
+        'findmnt -no FSTYPE / | grep -qx btrfs || exit 0' \
         'awk "BEGIN { OFS=\"\t\" } /^[[:space:]]*#/ { print; next } \$2 == \"/\" && \$3 == \"btrfs\" { opts=\$4; gsub(/subvol=@rootfs/, \"subvol=/@\", opts); if (opts !~ /compress=zstd/) { opts = \"compress=zstd,\" opts } \$4=opts } { print }" "$fstab" >"$tmp"' \
         'mv "$tmp" "$fstab"' \
         'mount -o remount,compress=zstd / || true' \
