--- a/debian.cfg
+++ b/debian.cfg
@@ -89,6 +89,7 @@ d-i apt-setup/security_host string security.debian.org
 
 # B.4.10. 选择软件包
 tasksel tasksel/first multiselect ssh-server
+d-i pkgsel/include string curl systemd-timesyncd
 d-i pkgsel/upgrade select none
 
 # B.4.11. 安装 bootloader
@@ -162,6 +163,7 @@ d-i preseed/late_command string true; \
     if [ "$link_grub_dir" = 1 ]; then ln -s grub /target/boot/grub2; fi; \
 
     in-target systemctl enable ssh; \
+    in-target systemctl enable systemd-timesyncd; \
 
     if [ -s /configs/ssh_keys ]; then \
         (umask 077; mkdir -p /target/root/.ssh; cat /configs/ssh_keys >/target/root/.ssh/authorized_keys); \
